src/test/resources/tokens/invalid/integer_out_of_bounds_positive_binary.unpick
unpick v3
group int
    0b100000000000000000000000000000000